# stratbox-windows

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
appdock/: manifest.json  preset.json
docs/: appdock-integration.md  architecture.md  development.md
scripts/: check_appdock_contract.py  check_internal_imports.py  check_release_integrity.py
src/stratbox_windows/: README.md  __init__.py  __main__.py
src/stratbox_windows/adapters/appdock/: __init__.py  bridge.py  entry.py  runtime_contracts.py  surface_state.py
src/stratbox_windows/adapters/desktop_host/: __init__.py  services.py
src/stratbox_windows/application/artifacts/: __init__.py  models.py  store.py
src/stratbox_windows/application/assignments/: __init__.py  models.py  store.py
src/stratbox_windows/application/background/: __init__.py  models.py  registry.py  store.py
src/stratbox_windows/application/cases/: __init__.py  models.py  store.py
src/stratbox_windows/application/events/: __init__.py  models.py  store.py
src/stratbox_windows/application/history/: __init__.py  (+1 more)
src/stratbox_windows/runtime/: __init__.py  app_surface_state.py  bootstrap.py  config.py  context.py  errors.py  logging.py  paths.py  session_runtime.py  user_preferences.py  version.py
tests/: conftest.py
tests/contracts/: test_appdock_entry.py  test_runtime_contracts.py
tests/smoke/: test_external_core_dependency.py  test_repository_contract.py
tests/unit/: test_paths.py  test_scenario_chat_projector.py  test_workspace_explorer_service.py  test_workspace_registry.py  test_workspace_resolver.py
(+90 files in other folders)
