[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stratbox-windows"
version = "0.1.0"
description = "Strategy Box Windows desktop surface for AppDock-managed analytical work."
requires-python = ">=3.10"
dependencies = [
  "stratbox>=0.2.1",
  "PySide6>=6.6",
]

[project.optional-dependencies]
plugin = [
  "stratbox-plugin>=0.2.1",
]
test = [
  "pytest>=8.0",
]

[project.scripts]
stratbox-windows = "stratbox_windows.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"stratbox_windows" = [
  "resources/workspace/*.json",
  "resources/styles/*.qss",
  "resources/images/*",
  "resources/icons/*.svg",
  "resources/icons/modes/*.svg",
]

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
